--- a/PhotoGallery.API/PhotoGallery.API.csproj
+++ b/PhotoGallery.API/PhotoGallery.API.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
       <PrivateAssets>all</PrivateAssets>
@@ -68,6 +68,14 @@
 		<Content Update="wwwroot\Images\fdfe7329-e05c-41fb-a7c7-4f3226d28c49.jpg">
 			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
 		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\PhotoGallery.Model\PhotoGallery.Model.csproj" />
 	</ItemGroup>
 
 </Project>
